@@ -1,3 +1,7 @@
+2004-04-19  Karl Runge <runge@karlrunge.com>
+	* support for cursor positions updates -cursorpos
+	* option for SIGPIPE handling -sigpipe
+
 2004-04-13  Karl Runge <runge@karlrunge.com>
 	* solve problem with sending selection when client initializing
 	  (not yet in RFB_NORMAL state).  Increase delay to 15s as well. 
