@@ -1,3 +1,6 @@
+2004-03-19  Karl Runge <runge@karlrunge.com>
+	* x11vnc: -cursorpos, -sigpipe
+
 2004-03-13  Karl Runge <runge@karlrunge.com>
 	* x11vnc: do not send selection unless all clients
 	  are in RFB_NORMAL state.
